fixed z-index of map control elements

--- a/src/assets/less/custom/map.less
+++ b/src/assets/less/custom/map.less
@@ -7,7 +7,9 @@
     height: 100%;
     overflow: hidden;
 
-    .mapboxgl-ctrl-group {
+    .mapboxgl-ctrl-top-right {
+      z-index: 1;
+
       .mapboxgl-ctrl-compass {
         display: none !important;
       }
